# anyzork

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile.catalog  README.md  ROADMAP.md  SECURITY.md  docker-compose.catalog.yml  pyproject.toml
2-cats-cheese-and-bugs-off-on/: commands.zorkscript  game.zorkscript  items.zorkscript  manifest.toml  npcs.zorkscript  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
a-haunted-lighthouse-on-a-foggy-coast/: manifest.toml
a-story-of-two-cats-cheese-the-stoic-orange-cat-and-his-y/: commands.zorkscript  manifest.toml  npcs.zorkscript  quests.zorkscript  rooms.zorkscript
a-test-world-1-room-override/: commands.zorkscript  manifest.toml  npcs.zorkscript  quests.zorkscript  rooms.zorkscript
an-adventure-of-a-orange-cat-named-cheese-and-a-gray-bobta/: manifest.toml
an-adventure-of-a-orange-cat-named-cheese-and-a-gray-bobta-2/: manifest.toml
an-adventure-of-a-orange-cat-named-cheese-and-a-gray-bobta-3/: game.zorkscript  manifest.toml  rooms.zorkscript
anyzork/: __init__.py  archive.py  catalog_api.py  catalog_store.py  cli.py  config.py  diagnostics.py  importer.py  lint.py  manifest.py  project.py  sharing.py  ui.py  validation.py  versioning.py  zorkscript.py
cheese-and-bugs-just-two-cats/: commands.zorkscript  game.zorkscript  items.zorkscript  manifest.toml  npcs.zorkscript  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
examples/: alchemist_tower.zorkscript  minimal_game.zorkscript  murder_mystery.zorkscript  pirate_island.zorkscript  zombie_survival.zorkscript
hunger-games-part-1/: commands.zorkscript  game.zorkscript  items.zorkscript  manifest.toml  npcs.zorkscript  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
hunger-games-part-1-2/: commands.zorkscript  game.zorkscript  items.zorkscript  manifest.toml  npcs.zorkscript  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
hunger-games-part-1-3/: commands.zorkscript  game.zorkscript  items.zorkscript  manifest.toml  npcs.zorkscript  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
hunger-games-part-1-4/: commands.zorkscript  game.zorkscript  manifest.toml
hunger-games-part-1-5/: items.zorkscript  manifest.toml  npcs.zorkscript
hunger-games-part-1-6/: commands.zorkscript  manifest.toml  puzzles.zorkscript  quests.zorkscript  rooms.zorkscript
just-a-regular-apartment-in-ch/: game.zorkscript  items.zorkscript  manifest.toml  puzzles.zorkscript
test-example-world-a-sandbox/: commands.zorkscript  manifest.toml  npcs.zorkscript  quests.zorkscript  rooms.zorkscript
test-world/: commands.zorkscript  manifest.toml  npcs.zorkscript  quests.zorkscript  rooms.zorkscript
test-world-empty-1-room-ove/: commands.zorkscript  manifest.toml  npcs.zorkscript  quests.zorkscript  rooms.zorkscript
tests/: build_test_game.py  conftest.py  test_alignment.py  test_archive.py  test_cache.py  test_catalog_api.py  test_cli.py  test_cli_generate.py  test_cli_import.py  test_combat.py  test_commands.py  test_commands_pass.py  test_commands_pipeline.py  test_config_versioning.py  test_dead_npc.py  test_doctor.py  test_faction.py  test_gemini_provider.py  test_health.py  test_importer.py  test_lint.py  (+31 more)
(+124 files in other folders)
