[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyzork"
version = "0.1.0"
description = "Deterministic Zork-style text adventure authoring and runtime CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AnyZork contributors" },
]
keywords = [
    "cli",
    "interactive-fiction",
    "llm",
    "sqlite",
    "text-adventure",
    "zork",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
narrator = [
    "anthropic>=0.39",
    "openai>=1.0",
    "google-genai>=1.0",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/oobagi/anyzork"
Repository = "https://github.com/oobagi/anyzork"
Issues = "https://github.com/oobagi/anyzork/issues"

[project.scripts]
anyzork = "anyzork.cli:main"

[tool.hatch.build]
exclude = [
    "/.claude",
    "/.github",
    "/AGENTS.md",
    "/CLAUDE.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["anyzork"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
